fix nav styling on mobile

--- a/frontend/src/components/mobileNav/MobileNav.scss
+++ b/frontend/src/components/mobileNav/MobileNav.scss
@@ -11,7 +11,7 @@ $nav-button-dark-green: #1b5e20;
     flex-direction: column;
     width: 100%;
     background-color: white;
-    padding: 0px 5px;
+    padding: 5px 0px;
 
     .mobile-horizontal {
       display: flex;
@@ -21,7 +21,7 @@ $nav-button-dark-green: #1b5e20;
 
     button {
       background-color: inherit;
-      font-size: 1.5em;
+      font-size: 1.8em;
       color: $nav-button-dark-green;
     }
 
